Fixed: Word wrapping and scrolling in notification popups

--- a/tags/ChromeConsole/notify.css
+++ b/tags/ChromeConsole/notify.css
@@ -6,7 +6,6 @@ body {
 	margin: 0;
 	padding: 0;
 	width: 100%;
-	overflow: hidden;
 	font-family: arial, sans-serif;
 	font-size: 0.8em;
 }
@@ -30,10 +29,10 @@ body {
 }
 
 .hbox {
-	display: -webkit-box;
 	-webkit-box-orient: horizontal;
 	-webkit-box-align: stretch;
 	position: relative;
+	word-wrap: break-word;
 }
 
 .rounded {
